gitops/flag-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-flag-service
  name: app-flag-service
  namespace: flag-service
spec:
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: app-flag-service
  template:
    metadata:
      labels:
        app: app-flag-service
    spec:
      containers:
        - name: app-flag-service 
          image: 903947067217.dkr.ecr.us-east-1.amazonaws.com/togglemaster_flag-service:v1.0.0-a5a89da
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "206Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8002
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8002
